test/e2e/fail/009-type-arity/input.tjs
function foo(a, b) {
  return a + b;
}

let x = foo(1);
